# pS3

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  bash.exe.stackdump  build.rs  config.yaml
.sqlx/: query-178c937be9fe0cf5179d40a5faf0117c8e5b6273e1f2d852997c8cce53aca561.json  query-325f7ec445f70157b01d6ca2809d31cf968ed3fe70d1d848fb31fdb871a7ee0e.json  query-48051531301600156ad90ea9139b5bfbef06389d106f424e39754502aa2cd2e2.json  query-4f861763e7afcddf346f4772f57f3c1c60455d66e8caa78cfa60697ea253feb4.json  query-69a4017c6e21c10e87d40caa70a01ab265f4882519d78700b41191c4f4649e06.json  query-79c37f0ae9b18850155ac014fa34e61bdcd806766ee82ba7110e2d75f639be68.json  query-80a73d71c07e94e49c015c424ad7b8a18101e65c4be5d93b80bc5c9094a3886d.json  query-aedf68966e5f7fbdf02d0f2f125e782a11f3edc5aef853a99c6f8def2c4fa82a.json  query-c54e1b0c2cb412d2d31fba1c171f7797477257632e91a0234a25f0eced1df5f9.json  query-d48809290972233c0eeec7ddd13b30920585f57ca59635d947098665f95d9ea7.json
src/: config.rs  main.rs
src/controllers/: buckets_controller.rs  files_controller.rs  health_controller.rs  mod.rs
src/grpc/: buckets_handler.rs  files_handler.rs  health_handler.rs  helpers.rs  mod.rs
src/grpc/proto/: ps3.proto
src/lib/: file_actions.rs  mod.rs  multipart.rs
src/migrations/: 20260523055746_create_buckets_table.sql  20260523055758_create_files_table.sql
src/models/: bucket.rs  file.rs
src/repositories/: buckets_repository.rs  files_repository.rs  mod.rs
src/router/: mod.rs
src/services/: buckets_service.rs  files_service.rs  mod.rs
testing/: requirements.txt  test_api.py  test_grpc.py
testing/fixtures/: sample1.txt  sample2.txt  sample3.txt
