[package]
name = "pS3"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["multipart"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "tls-native-tls", "uuid", "chrono"] }
tokio = { version = "1.52.3", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
tokio-util = { version = "0.7", features = ["io"] }
